--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.130",
+    "mammoth": "^1.6.0",
     "openai": "^4.0.0",
     "pdf-parse": "^1.1.1"
   }
